removed no longer supported command line options in java 8; code rewrite to get rid of scala compilation warnings